--- a/mysite/templates/video_input.html
+++ b/mysite/templates/video_input.html
@@ -21,6 +21,13 @@
                     </div>
                 </div>
             </div>
+            <div class="container-fluid text-center">
+                <div class="grid-container">
+                    <div class="text-container">
+                        <p>{{text_cap}}</p>
+                    </div>
+                </div>
+            </div>
             <script type="text/javascript">
                 var video = document.querySelector(".video-element");
                 var stop_button = false;
