--- a/mysite/templates/video_input.html
+++ b/mysite/templates/video_input.html
@@ -1,3 +1,4 @@
+<title>Detector de lengua de señas</title>
 {% extends 'base.html' %}
 {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'CSS/estilosHome.css' %}"/>
