--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -1,14 +1,10 @@
 <title>Inicio</title>
 {% extends "base.html"%}
 {% load static %}
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="{% static '/CSS/Main.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'static\traductor_ls\animaciones.css' %}">
     <script src="{% static '/JS/Main.js' %}"></script>
-    <script type="text/javascript" src="index.js"></script>
   {% block content %}
   <br><br><br><br>
   <section class="zona1">
@@ -18,9 +14,10 @@
             <div class="col-8">
               <br><br><br><br>
               <h2><span> BIENVENIDOS </span></h2>
-              <p>Los lenguajes de señas son lenguajes visuales 
-                que se comunican a través de movimientos manuales, 
-                faciales y corporales. Aprender un segundo idioma no solo es bueno para tu cerebro;
+              <p>La lengua de señas es un lenguaje visual 
+                en el que la comunicación se da a través de movimientos manuales, 
+                faciales y corporales.
+                Aprender un segundo idioma no solo es bueno para tu cerebro;
                 también es una excelente manera de mejorar sus habilidades de comunicación.
               </p>
             </div>
