--- a/mysite/templates/video_input.html
+++ b/mysite/templates/video_input.html
@@ -9,26 +9,17 @@
         <body>
             <section class="header-background">
                 <br><br><br><br><br>
-                <h2>Sitio Web diseñado para traducir el abecedario del <br>
-                Lenguaje de Señas a texto</h2>
+                <h2>Módulo diseñado para traducir el abecedario de <br>
+                Lengua de Señas a texto</h2>
                 <br><br>
             </section>
-            <div class="container-fluid text-center">
+            <div class="container text-center">
                 <div class="grid-container">
                     <div class="video-container" class="itemVideo">
                         <img src='http://127.0.0.1:8080/video_input/video_stream' id="video">
                     </div>
                 </div>
-            </div>
-            <br><br><br><br><br><br>
-            <div class="container-fluid text-center">
-                <div class="grid-container">
-                    <div class="text-container">
-                        <p>{{text_cap}}</p>
-                    </div>
-                </div>
-            </div>
-            
+            </div>            
             <br><br><br>
         </body>
         
